# GLFCV

./: .gitignore  CMakeLists.txt  FindOpenCV.cmake  FindPkgMacros.cmake  README  README.md  readme.txt  required-library-installation.txt
src/: decoder.cpp  decoder.h  guidedfilter.cpp  guidedfilter.h  helper.cpp  helper.h  lf-depth-est.cpp  lf-depth-est.h  lfp.cpp  lfp.h  main.cpp  white-calib.cpp  white-calib.h
src/cuda-kernels/: lf-cuda-kernels.cu  lf-cuda-kernels.h
